maple-core-macro/tests/ui/component-fail.stderr
error: expected an assignment expression
  --> $DIR/component-fail.rs:15:27
   |
15 |     template! { Component(1) };
   |                           ^
